k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
  namespace: front
spec:
  rules:
  - host: meu-portal.localhost.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: portal-v1
              port:
                number: 5000
